--- a/style.css
+++ b/style.css
@@ -1,20 +1,55 @@
-/* RESETS
-    Here you put styles that modify the original behavior CSS/HTML had,
-    for example: list elements come with a little circle that nobody uses anymore.
- */
-ul{margin: 0; padding:0;}
-ul li{list-style: none;}
 
-/* 
-    BEHAVIORAL STYLES
-    for example: .horizontal, .container, .p-1 (for padding one)
-*/
-.p-1{ padding: 10px; }
+*{
+    margin: 0;
+    padding:0;
+    box-sizing: border-box;
+}
+
+#headercontainer{
+    display: flex;
+    justify-content: space-between;
+    /* width: 100%;    */
+    padding: 10px;
+    margin:10px;
+    text-align: center;
+    align-items: center;
+    border:none;
+    border-bottom: 2px solid lightgray;
+}
+
+
+#headercontainer nav a{
+    font-size: 14px;
+    text-decoration: none;
+    padding: 8px;
+    text-align: center;
+    color: gray;
+}
+
+
+.header{
+    margin: 15px;
+}
+  
+.header a {
+    font-size: 12px;
+    text-decoration: none;
+    padding: 5px;
+    text-transform: uppercase;
+    font-weight: 500;
+    text-align: center;
+    color: gray;
+    
+}
+.header a:last-child{
+    font-weight:700;
+    }
 
 
 
-
-/* 
-    SPECIFIC TO YOUR WEBSITE 
-    The more senior you become the less you have specific styles
-*/
+a:visited { 
+    text-decoration: none;
+    color: gray; 
+}
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; }
